# otuscpp-hw-1-ipfilter

./: .gitignore  BuildNumber.h  CMakeLists.txt  LICENSE  README.md  Versioning.txt  main.cpp  version.cpp  version.cpp.in  version.h
.github/workflows/: c-cpp.yml
Releases/: ipFilter_1.1.3_amd64.deb
tools/: makeDebPackage.sh
